--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
     <a routerLink="/heroes">Heroes</a>
 </nav>
 <router-outlet></router-outlet>
+<app-countdown-local-var-parent></app-countdown-local-var-parent>
 <app-message></app-message>
